Se agrega campo email a la layout y al array en el componente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,6 +73,7 @@
           <tr *ngFor="let employee of employees; let i = index">
             <td>{{employee.name}}</td>
             <td>{{employee.position}}</td>
+            <td>{{employee.email}}</td>
             <td>
               <a (click) = "editEmployee(i)" class="btn btn-success">
                 Edit
