--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,11 +55,10 @@
           </div>
         </div>
       </form>
-    </div>
-    
+    </div> 
   </div>
   <div class="row">
-    <div class="col-ms-8">
+    <div class="col-sm-8">
       <h2>Read Data: </h2>
       <table class="table table-bordered">
         <thead>
@@ -85,6 +84,45 @@
           </tr>
         </tbody>
       </table>
+    </div>
+    <div class="col-sm-4">
+      <h2>Update data: </h2>
+      <form class="form-horizontal">
+        <!-- Input para el nombre -->
+        <div class="form-group">
+          <label for="name" class="control-label col-sm-2">
+            Name
+          </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="model2.name" placeholder="Enter a new name">
+          </div>
+        </div>
+        <!-- Input para la posicion -->
+        <div class="form-group">
+          <label for="position" class="control-label col-sm-2">
+            Position
+          </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="position" name="position" [(ngModel)]="model2.position" placeholder="Enter a new position">
+          </div>
+        </div>
+        <!-- Input para el email -->
+        <div class="form-group">
+          <label for="email" class="control-label col-sm-2">
+            Email
+          </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="email" name="email" [(ngModel)]="model2.email" placeholder="Enter a new email">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10 col-sm-offset-2">
+            <button type="submit" class="btn-success" (click) = "updateEmployee()">
+              Save
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
