Se agrega th a tabla y se agrega funcionamiento del metodo editEmploye

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,7 @@
           <tr>
             <th>Name</th>
             <th>Position</th>
+            <th>Email</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -77,7 +78,7 @@
               <a (click) = "editEmployee(i)" class="btn btn-success">
                 Edit
               </a>
-              <a (click) = "deleteEmployee(i)" class="btn btn-danger">
+              <a (click) = "deleteEmployee()" class="btn btn-danger">
                 Delete
               </a>
             </td>
