Se pasa indice i en evento click del boton borrar y se agrega funcionamiento el metodo deleteEmployee

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
               <a (click) = "editEmployee(i)" class="btn btn-success">
                 Edit
               </a>
-              <a (click) = "deleteEmployee()" class="btn btn-danger">
+              <a (click) = "deleteEmployee(i)" class="btn btn-danger">
                 Delete
               </a>
             </td>
