Se agrega propiedad hide en la columna del formulario para actualizar los datos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
         </tbody>
       </table>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4" [hidde]="hideUpdate()">
       <h2>Update data: </h2>
       <form class="form-horizontal">
         <!-- Input para el nombre -->
